# wasmer

./: Cargo.toml
lib/object/: Cargo.toml
lib/object/src/: error.rs  lib.rs  module.rs
lib/types/: Cargo.toml
lib/types/src/: error.rs  lib.rs  libcalls.rs  memory.rs  module.rs  serialize.rs  store_id.rs  trapcode.rs  types.rs  units.rs  vmoffsets.rs
lib/types/src/compilation/: module.rs  symbols.rs  target.rs
lib/types/src/stack/: frame.rs
lib/virtual-fs/: Cargo.toml
lib/vm/: Cargo.toml
lib/vm/src/: export.rs  extern_ref.rs  function_env.rs  global.rs  lib.rs  libcalls.rs  memory.rs  mmap.rs  sig_registry.rs  store.rs  table.rs  threadconditions.rs  vmcontext.rs
lib/vm/src/instance/: allocator.rs  mod.rs
lib/vm/src/trap/: trap.rs  traphandlers.rs
