[package]
name = "wasmer-object"
description = "Wasmer Native Object generator"
categories = ["wasm"]
keywords = ["wasm", "webassembly"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
wasmer-types = { path = "../types", version = "=4.2.5", default-features = false, optional = true }
object = { version = "0.28.3", default-features = false }
thiserror = { version = "1.0", optional = true }

# These are for theseus port - so these would remain optional
thiserror_core2 = { version = "2.0.0", default-features = false, optional = true }
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"], optional = true }

[features]
default = ["std"]
std = ["thiserror", "wasmer-types/std", "object/write"]
core = ["wasmer-types/core", "thiserror_core2", "core2", "object/write_core", "object/coff", "object/elf", "object/macho", "object/pe"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
