[package]
name = "wasmer-types"
description = "Wasmer Common Types"
categories = ["wasm", "no-std", "data-structures"]
keywords = ["wasm", "webassembly", "types"]
license = "MIT OR Apache-2.0 WITH LLVM-exception"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"], optional = true, default-features = false }
serde_bytes = { version = "0.11", optional = true, default-features = false}
thiserror = { version = "1.0", optional = true }
thiserror_core2 = { version = "2.0.0", default-features = false, optional = true }
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"], optional = true}
hashbrown = { version = "0.11.2", features = ["ahash"], default-features = false }
more-asserts = "0.2"
indexmap = { version = "1.6" }
rkyv = { version = "0.7.43", default-features = false, features = ["alloc", "indexmap", "validation", "size_32", "strict"]}
enum-iterator = "0.7.0"
target-lexicon = { version = "0.12.2", default-features = false }
enumset.workspace = true
bytecheck = { version = "0.6.8", default-features = false }

[target.'cfg(target_os = "theseus")'.dependencies]
theseus_mutex = { path = "../../../../kernel/sync_block", package = "sync_block", features = ["std-api"] }

[dev-dependencies]
memoffset.workspace = true

[features]
default = ["std"]
std = ["thiserror", "rkyv/std", "bytecheck/std"]
core = ["thiserror_core2", "core2"]
enable-serde = ["serde", "serde/std", "serde_bytes", "indexmap/serde-1"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
