[package]
name = "wasmer-vm"
description = "Runtime library support for Wasmer"
categories = ["wasm"]
keywords = ["wasm", "webassembly"]
license = "MIT OR Apache-2.0 WITH LLVM-exception"
readme = "README.md"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
memoffset.workspace = true
wasmer-types = { path = "../types", version = "=4.2.5", default-features = false, optional = true }
libc = { version = "^0.2", default-features = false }
indexmap = { version = "1.6", default-features = false }
thiserror ={ version = "1.0", optional = true }
more-asserts = { version = "0.2", default-features = false }
cfg-if = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive", "rc"], optional = true, default-features = false }
enum-iterator = { version = "0.7.0", default-features = false }
scopeguard = { version = "1.1.0", default-features = false }
lazy_static = { version = "1.4.0", optional = true }
corosensei = { version = "0.1.2", default-features = false }
derivative = { version = "^2", default-features = false }
dashmap = { version = "5.5.3", default-features = false, optional = true }
fnv = { version = "1.0.3", default-features = false }
backtrace = { version = "0.3.61", default-features = false }
region = { version = "3.0.0" }
# - Optional shared dependencies.
tracing = { version = "0.1", default-features = false, optional = true }
crossbeam-queue = { version = "0.3.8", default-features = false }
leapfrog = { version = "0.3.0", git = "https://github.com/deepkn/leapfrog", optional = true }

# These are for theseus port - so these would remain optional
thiserror_core2 = { version = "2.0.0", default-features = false, optional = true }
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"], optional = true }
hashbrown = { version = "0.11.2", features = ["ahash"], default-features = false, optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
mach = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase", "memoryapi", "errhandlingapi"] }

[target.'cfg(target_os = "theseus")'.dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
theseus_catch_unwind = { path = "../../../../kernel/catch_unwind", package = "catch_unwind" }
thread_local_macro = { path = "../../../../kernel/thread_local_macro" }
theseus_std = { path = "../../../../ports/theseus_std" }
theseus_memory = { path = "../../../../kernel/memory", package = "memory" }
theseus_task = { path = "../../../../kernel/task", package = "task" }
theseus_signal_handler = { path = "../../../../kernel/signal_handler", package = "signal_handler" }
theseus_mutex = { path = "../../../../kernel/sync_block", package = "sync_block", features = ["std-api"] }
spin = { version = "0.9.0", git = "https://github.com/theseus-os/spin-rs" }

[build-dependencies]
cc = "1.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std"]
std = ["lazy_static", "thiserror", "wasmer-types/std", "scopeguard/use_std", "crossbeam-queue/std", "serde/std", "indexmap/std", "fnv/std", "tracing/std", "dashmap", "backtrace/std"]
core = ["wasmer-types/core", "derivative/use_core", "thiserror_core2", "core2", "hashbrown", "leapfrog", "crossbeam-queue/alloc"]
enable-serde = ["serde", "indexmap/serde-1", "wasmer-types/enable-serde" ]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
